--- a/app/templates/_layout.html
+++ b/app/templates/_layout.html
@@ -24,14 +24,30 @@
     <link href="{% static 'theme/css/custom.min.css' %}" rel="stylesheet" type="text/css">
 
 
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="{% static 'app-css/common.css' %}">
     <script src="{% static 'app-js/common.js' %}"></script>
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 
 </head>
 
 <body class="dashboard-topbar-wrapper">
+
+    <div id="spinner-element-lg">
+        <div class="spinner-element-lg-overlay">
+            <img src="{% static 'img/loader.gif' %}" alt="">
+        </div>
+    </div>
+   
+    <div id="spinner-element-sm">
+        <div class="spinner-element-sm-overlay">
+            <img src="{% static 'img/loader.gif' %}" alt="">
+        </div>
+    </div>
+    <input type="hidden" name="" id="apiUrl" value='{{url}}'>
+    <input type="hidden" name="" id="jwtToken" value='{{jwt_token}}'>
+    <input type="hidden" name="" id="instituteId" value='{{institute_id}}'>
     <!-- Begin page -->
     <div id="layout-wrapper">
 
@@ -124,8 +140,19 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="/app/notice" class="nav-link menu-link"> <i class="bi bi-broadcast-pin"></i> <span
-                                    data-key="t-to-do">Notice</span> </a>
+                            <a class="nav-link menu-link collapsed" href="#noticeLayout" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="noticeLayout">
+                                <i class="bi bi-broadcast-pin"></i> <span data-key="t-layouts">Notice</span>
+                            </a>
+                            <div class="collapse menu-dropdown" id="noticeLayout" style="background: var(--tb-vertical-menu-bg)">
+                                <ul class="nav nav-sm flex-column">
+                                    <li class="nav-item">
+                                        <a href="/app/notice_create" class="nav-link" data-key="t-horizontal">New Notice</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="/app/notice" class="nav-link" data-key="t-detached">Notice Records</a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
 
                         <li class="nav-item">
@@ -183,7 +210,7 @@
                         </button>
 
                         <div>
-                           <h4 class="organization_name">Oakridge International</h4>
+                           <h4 class="organization_name">{{ organization_name }}</h4>
                         </div>
                     </div>
 
@@ -191,7 +218,7 @@
 
                         <div class="dropdown topbar-head-dropdown ms-1 header-item">
                             
-                                <p>Your subscription is Active</p>
+                                <p>{{ message }}</p>
                         </div>
 
                         
