--- a/app/templates/notice.html
+++ b/app/templates/notice.html
@@ -2,12 +2,10 @@
 {% extends '_layout.html' %}
 {% load static %}
 {% block title %} Notice Management {% endblock %}
- 
 {% block content %}
-{% load static %}
 <link href="{% static 'app-css/notice.css' %}" rel="stylesheet">
-
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+{% comment %} <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script> {% endcomment %}
 
 <div class="row" id="heading-row">
     <div class="col-sm-12 col-md-8 col-xl-8" style="padding: 1rem">
@@ -17,82 +15,20 @@
     <div class="col-sm-12 col-md-4 col-xl-4" style="padding: 1rem">
         <div class="row">
             <div class="col text-end">
-                <button type="button" onclick="showStudentForm()" 
-                        class="btn btn-success btn-label rounded-pill right">
-                        <i class="bi bi-plus-circle label-icon align-middle fs-lg ms-2"></i>Create Notice</button>
+                <a href="/app/notice_create" class="btn btn-success btn-label rounded-pill right">
+                    <i class="bi bi-plus-circle label-icon align-middle fs-lg ms-2"></i>Create Notice</a>                
             </div>
         </div>
     </div>
 </div>
-<section class="form_section bg-grey" id="studentForm">
-    <article class="container-fluid">
-        <div class="row">
-            <div class="col-xl-8"></div>
-            <div class="col-xl-4 form_div">
-                <div class="row">
-                    <div class="col-xl-6">
-                        <h3>Create Notice</h3>
-                    </div>
-                    <div class="col-xl-6 text-end">
-                        <a class="btn-close" onclick="closeStudentForm()" aria-label="Close"></a>
-                    </div>
-                </div>
-                    <form class="row g-2" id="notice-form"  method="POST" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        <input type="hidden" id="id" name="id">
-                        
-                        <div class="col-md-12">
-                            <label for="NoticeTitle" class="form-label">Notice Title</label>
-                            <textarea class="form-control" id="notice_title" name="notice_title" placeholder="Enter the Notice Title"></textarea>
-                        </div>
-                        <div class="col-md-12">
-                            <label for="NoticeDate" class="form-label">Notice Date</label>
-                            <input type="date" class="form-control" id="notice_date" name="notice_date">
-                        </div>
-                        <div class="col-md-12">
-                            <label for="DueDate" class="form-label">Due Date</label>
-                            <input type="date" class="form-control" id="due_date" name="due_date">
-                        </div>
-                        <div class="col-md-12">
-                            <label for="NoticeDescription" class="form-label">Notice Description</label>
-                            <textarea class="form-control" id="notice_description" name="notice_description" placeholder="Enter the Notice Description"></textarea>
-                        </div>
-                        <div class="col-md-12">
-                            <label for="Recipient" class="form-label">Recipient</label>
-                            <select name="recipient" class="recipient" id="recipient" required>
-                                <option value="" selected disabled>Select</option>
-                                            <option value="All">All</option>
-                                            <option value="All Staffs Only">All Staffs Only</option>
-                                            <option value="All Students Only">All Students Only</option>
-                                            <option value="All Parents Only">All Parents Only</option>
-                                            <option value="All Students & Parents Only">All Students & Parents Only</option>
-                                            <option value="Selective Students">Selective Students</option>
-                                            <option value="Selective Staffs">Selective Staffs</option>
-                                            <option value="Selective Parents">Selective Parents</option>
-                            </select>
-                        </div>
-                        <div class="col-md-12"></div>
-                            <label for="Announcedby	" class="form-label">Announced by</label>
-                            <textarea class="form-control" id="notice_announced_by" name="notice_announced_by" placeholder="Enter the announcer name"></textarea>
-
-                        <div class="d-flex justify-content-end">
-                            <a class="btn btn-danger rounded-pill" onclick="closeStudentForm()" style="margin-right:10px;">Cancel</a>                            
-                            <button type="submit" class="btn btn-success rounded-pill">Save</button>
-                        </div>
-                    </form>
-            </div>
-        </div>
-    </article>
-</section>
-
 
 <section data-jwt-tokens="{{ jwt_token }}" id="jwt_card"></section>
 <div class="row">
     <div class="col-xl-12">
-
-<table class="table table-striped table-hover table-sticky table_students">
+        {% if notices %}
+<table class="table table-striped table-hover table-sticky table_students" id="noticeTable">
     <thead class="thead-dark">
-      <tr >
+        <tr >
         <th>Notice Number</th>
         <th>Notice Title</th>
         <th>Notice Date</th>
@@ -101,40 +37,50 @@
         <th>Recipient</th>
         <th>Announced by</th>
         <th>Action</th>
-      </tr>
+        </tr>
     </thead>
     <tbody class="tbl__bdy" id="notice_details">
-        {% for notice in notices %}
-        <tr class="tr-notice-{{notice.notice_id}}">
-        <td>{{forloop.counter}}</td>
-        <td class="notice_title">{{notice.notice_title}}</td>
-        <td class="notice_date">{{notice.notice_date}}</td>
-        <td class="due_date">{{notice.due_date}}</td>
-        <td>    
-            <button class="btn btn-sm btn-dark  rounded-pill openBtn">View</button>
-        </td>
-        <td class="recipient">{{notice.recipient}}</td>
-        <td class="announced_by">{{notice.notice_announced_by}}</td>
-        <td>
-            <button type="button" class="btn btn-sm btn-info" onclick="EditButton(this)" data-id="{{notice.notice_id}}">
-                <i class="bi bi-pencil-square"></i>
-            </button>
-            <button type="button" class="btn btn-sm btn-danger">
-                <i class="bi bi-trash3"></i>
-            </button>
-        </td>
-      </tr>                     
-      {% endfor %}
+            {% for notice in notices %}
+            <tr class="tr-notice-{{notice.notice_id}}">
+            <td>{{forloop.counter}}</td>
+            <td class="notice_title">{{notice.notice_title}}</td>
+            <td class="notice_date">{{notice.notice_date}}</td>
+            <td class="due_date">{{notice.due_date}}</td>
+            <td>    
+                <button type="button" class="btn btn-sm btn-dark rounded-pill openBtn" data-bs-toggle="modal" data-bs-target="#notice-view-modal" data-id="{{notice.notice_id}}" data-title="{{notice.notice_title}}" data-description="{{notice.notice_description}}">View</button>
+            </td>
+            <td class="recipient">{{notice.recipient}}</td>
+            <td class="announced_by">{{notice.notice_announced_by}}</td>
+            <td>
+                <a href="{% url 'notice_edit' notice.notice_id %}" data-id="{{notice.notice_id}}" class="btnNoticeEdit btn btn-sm btn-info"><i class="bi bi-pencil-square"></i></a>
+                <a href="#" data-id="{{notice.notice_id}}" class="dltBtn btn btn-sm btn-danger"><i class="bi bi-trash3"></i></a>
+            </td>
+            </tr>                     
+            {% endfor %}
     </tbody>
-  </table>
-  </div>
+</table>
+{% else %}
+            <div class="col-md-12 text-center">
+                <img src="{% static "img/no_data_found.png" %}" alt="noImage" class="no_data_found"/>
+            </div>
+        {% endif %}
+</div>
 </div>
 </section>
 
-
-
+<div class="modal fade bs-example-modal-md" id="notice-view-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-md">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="mySmallModalLabel"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="notice-view-body">
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+</div>
 
 <script src="{% static 'app-js/notice.js' %}"></script>
-
 
 {% endblock %}
