--- a/app/templates/students.html
+++ b/app/templates/students.html
@@ -5,9 +5,7 @@
 {% block content %}
 <link rel="stylesheet" href="{% static 'app-css/students_html.css' %}">
 <script src="{% static 'app-js/students.js' %}"></script>
-<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-
+<script src="{% static 'app-js/sweetalert.js' %}"></script>
 <div class="row" id="heading-row">
     <div class="col-sm-12 col-md-8 col-xl-7.5" style="padding: 1rem">
         <h5>Students</h5>
@@ -37,45 +35,52 @@
     </div>
 </div>
 <!-- Student table start -->
-    <section class="row" data-jwt-tokens="{{ jwtToken }}" id="jwt_card">
-        <div class="col-md-12">
-            <table class="table table-striped table-hover table-sticky table_students">
-                <thead class="thead-dark">
-                    <tr>
-                        <th>S.No</th>
-                        <th>Student Name</th>
-                        <th>Roll Number</th>
-                        <th>Class </th>
-                        <th>Section</th>
-                        <th>Gender</th>
-                        <th>Blood Group</th>
-                        <th>Student Action</th>
-                    </tr>
-                </thead>
-                <tbody class="tbl__bdy">
-                    {% for student in student_data %}
-                    <tr class="tr-student-{{student.student_id}}">
-                        <td>{{forloop.counter}}</td>
-                        <td class="student_name">{{ student.student_name }}</td>
-                        <td class="roll_number">{{ student.roll_number }}</td>
-                        <td class="class_id">{{ student.class_id }}</td>
-                        <td class="section_id">{{ student.section_id }}</td>
-                        <td class="gender">{{ student.gender }}</td>
-                        <td class="blood_group">{{ student.blood_group }}</td>
-                        <td>
-                            <a href="#" onclick="EditButton(this, event)" data-id="{{student.student_id}}" class="btn btn-sm btn-info">
-                                <i class="bi bi-pencil-square"></i>
-                            </a>
-                            <a href="#" onclick="DeleteButton(this, event)" data-id="{{student.student_id}}" class="btn btn-sm btn-danger">
-                                <i class="bi bi-trash3"></i>
-                            </a>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+    <section class="row">
+        {% if student_data %}
+            <div class="col-md-12">
+                    <table class="table table-striped table-hover table-sticky table_students" id="studentsTable">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th>S.No</th>
+                                <th>Student Name</th>
+                                <th>Roll Number</th>
+                                <th>Class </th>
+                                <th>Section</th>
+                                <th>Gender</th>
+                                <th>Blood Group</th>
+                                <th>Student Action</th>
+                            </tr>
+                        </thead>
+                        <tbody class="tbl__bdy">
+                            {% for student in student_data %}
+                            <tr class="tr-student-{{student.student_id}}">
+                                <td>{{forloop.counter}}</td>
+                                <td class="student_name">
+                                    <a href="{% url 'student_info' student.slug %}" class="text-dark">{{student.student_name}}</a>
+                                </td>
+                                <td class="roll_number">{{ student.roll_number }}</td>
+                                <td class="class_id">{{ student.class_id }}</td>
+                                <td class="section_id">{{ student.section_id }}</td>
+                                <td class="gender">{{ student.gender }}</td>
+                                <td class="blood_group">{{ student.blood_group }}</td>
+                                <td>
+                                    <a href="{% url 'edit_student' student.slug  %}"  class="btn btn-sm btn-info">
+                                        <i class="bi bi-pencil-square"></i>
+                                    </a>
+                                    <a href="#" data-student-id="{{student.student_id}}" class="btn btn-sm btn-danger btnStudentDelete">
+                                        <i class="bi bi-trash3"></i>
+                                    </a>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+            </div>
+        {% else %}
+        <div class="col-md-12 text-center">
+                <img src="{% static 'img/no_data_found.png' %}" alt="No Image" class="no_data_found">
         </div>
-       
+        {% endif %}
     </section>
 <!-- student table end -->
 
