--- a/assets/app-css/common.css
+++ b/assets/app-css/common.css
@@ -48,7 +48,6 @@ body{
     width: 100%;
     border-collapse: collapse;
     border: 1px solid #ddd;
-    height: 30vh !important;
     overflow:auto !important;
     background-color: #fff !important;
 }
@@ -65,4 +64,96 @@ body{
 }
 .tripledots-dropdown-toggle::after{
     content: "" !important;
+}
+
+/* animation button */
+@keyframes btn-shake {
+    0%, 20%, 40%, 60%, 80%, 100% {
+        transform: translateX(10%);
+    }
+    10%, 30%, 50%, 70%, 90% {
+        transform: translateX(-10%);
+    }
+}
+
+.btn-shake {
+    animation: btn-shake 0.82s;
+}
+.student_profile{
+    margin-top:.2rem;
+    height: 9rem;
+    width:25%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.parent_profile{
+    margin-top:.2rem;
+    height: 6rem;
+    width:25%;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+#spinner-element-lg {
+    display: none;
+}
+.spinner-element-lg-overlay {
+    position: absolute;
+    height:100%;
+    width: 100%;
+    z-index:1000;
+    top: 0%;
+    left: 0%;
+    right: 0%;
+    bottom: 0%;
+    background-color:rgba(255,255,255,0.5);
+    text-align: center;
+}
+.spinner-element-lg-overlay img{
+    margin-top: 25%;
+}
+ 
+#spinner-element-sm {
+    display: none;
+}
+.spinner-element-sm-overlay {
+    position: absolute;
+    height:100%;
+    width: 100%;
+    z-index:1000;
+    top: 0%;
+    left: 0%;
+    right: 0%;
+    bottom: 0%;
+    background-color:rgba(255,255,255,0.5);
+    text-align: center;
+}
+.spinner-element-sm-overlay img{
+    margin-top: 25%;
+}
+
+.bus-vehicle{
+    height: auto;
+    width: 145px;
+    max-width: 100%;
+}
+.transport-data {
+    color: black;
+    font-size: 1rem;
+    margin-left: 28rem;
+    margin-top: 2rem;
+}
+.image {
+    margin-right: 5rem; 
+}
+.no_data_found {
+    width: 48rem;
+    text-align: center;
+    margin-left: 8rem;
+}
+.transport-details {
+    margin-top: 1rem;
+}
+.info-header{
+    text-align: center;
 }
