--- a/app/templates/register_student.html
+++ b/app/templates/register_student.html
@@ -66,14 +66,14 @@
                                     <div class="col-md-12">
                                         <label for="student_name" class="form-label">Name</label>
                                         <input type="text" class="form-control" id="student_name" name="student_name"
-                                        value="{{student_data.student_name}}" >
+                                        value="{{student_data.student_name}}" maxlength="255">
                                     </div>
                                     <div class="row">
 
                                         <div class="col-md-5">
                                             <label for="date_of_birth" class="form-label">Date of Birth</label>
                                             <input type="date" class="form-control" id="date_of_birth"
-                                                name="date_of_birth" value="{{student_data.date_of_birth}}">
+                                                name="date_of_birth" value="{{student_data.date_of_birth}}" >
                                         </div>
                                         <div class="col-md-3">
                                             <label for="blood_group" class="form-label">Blood Group</label>
@@ -114,52 +114,12 @@
                                 <div class="accordion-body">
                                     <div class="col-md-12">
                                         <label for="email" class="form-label">Email</label>
-                                        <input type="text" class="form-control" id="email" name="email" value="{{student_data.email}}">
+                                        <input type="text" class="form-control" id="email" name="email" value="{{student_data.email}}" maxlength="255">
                                     </div>
                                     <div class="col-md-12">
                                         <label for="phone_number" class="form-label">Phone</label>
                                         <input type="text" class="form-control" id="phone_number" name="phone_number"
                                             minlength="10" maxlength="10" value="{{student_data.phone_number}}">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="accordionborderedExample3">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#accor_borderedExamplecollapse3" aria-expanded="false"
-                                    aria-controls="accor_borderedExamplecollapse3">
-                                    Parents
-                                </button>
-                            </h2>
-                            <div id="accor_borderedExamplecollapse3" class="accordion-collapse collapse"
-                                aria-labelledby="accordionborderedExample3" data-bs-parent="#accordionBordered">
-                                <div class="accordion-body">
-                                    <div class="col-md-12">
-                                        <label for="parent_name" class="form-label">Parent Name</label>
-                                        <input type="text" class="form-control" id="parent_name" name="parent_name"
-                                            >
-                                    </div>
-                                    <div class="col-md-12">
-                                        <label for="relation_with_student" class="form-label">Relation with
-                                            student</label>
-                                        <select id="relation_with_student" class="form-select"
-                                            name="relation_with_student" >
-                                            <option selected value="">Choose...</option>
-                                            <option value="Father">Father</option>
-                                            <option value="Mother">Mother</option>
-                                            <option value="Guardian">Guardian</option>
-                                        </select>
-                                    </div>
-                                    <div class="col-md-12">
-                                        <label for="parent_phone" class="form-label">Parent phone</label>
-                                        <input type="text" class="form-control" id="parent_phone" name="parent_phone"
-                                            >
-                                    </div>
-                                    <div class="col-md-12">
-                                        <label for="parent_email" class="form-label">Parent Email</label>
-                                        <input type="text" class="form-control" id="parent_email" name="parent_email"
-                                            >
                                     </div>
                                 </div>
                             </div>
@@ -177,30 +137,30 @@
                                 <div class="accordion-body">
                                     <div class="col-md-12">
                                         <label for="Address" class="form-label">Address Line</label>
-                                        <textarea class="form-control" id="address" rows="3" name="address"
-                                        value="{{student_data.address.0}}"></textarea>
+                                        <textarea class="form-control" id="address" rows="3" name="address" maxlength="255"
+                                        >{{student_data.address.0}}</textarea>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-6">
                                             <label for="city" class="form-label">City</label>
-                                            <input type="text" class="form-control" id="city" name="city" value="{{student_data.address.1}}">
+                                            <input type="text" class="form-control" id="city" name="city" value="{{student_data.address.1}}" maxlength="100">
                                         </div>
                                         <!-- state -->
                                         <div class="col-md-6">
                                             <label for="state" class="form-label">State</label>
-                                            <input type="text" class="form-control" id="state" name="state" value="{{student_data.address.2}}">
+                                            <input type="text" class="form-control" id="state" name="state" value="{{student_data.address.2}}" maxlength="100">
                                         </div>
                                     </div>
                                     <div class="row">
                                         <!-- country -->
                                         <div class="col-md-6">
                                             <label for="country" class="form-label">Country</label>
-                                            <input type="text" class="form-control" id="country" name="country" value="{{student_data.address.3}}">
+                                            <input type="text" class="form-control" id="country" name="country" value="{{student_data.address.3}}" maxlength="100">
                                         </div>
                                         <!-- pincode -->
                                         <div class="col-md-6">
                                             <label for="pincode" class="form-label">Pincode</label>
-                                            <input type="text" class="form-control" id="pincode" name="pincode" value="{{student_data.address.4}}">
+                                            <input type="text" class="form-control" id="pincode" name="pincode" value="{{student_data.address.4}}" maxlength="100">
                                         </div>
                                     </div>
                                 </div>
@@ -236,6 +196,10 @@
                                     </div>
                                 </div>
                             </div>
+                           
+                        </div>
+                        <div class="col-md-12">
+                            <code>Scroll up <i class="bi bi-arrow-up-short"></i> to Save changes.</code>
                         </div>
                     </div>
                 </div><!-- end card-body -->
