--- a/app/templates/student_info.html
+++ b/app/templates/student_info.html
@@ -389,7 +389,7 @@
                         <p class="text-muted mb-0">
                             <label class="form-label">Phone Number</label>
                             <input type="text" class="form-control" id="parent_phone" name="parent_phone"
-                                placeholder=" Enter Phone Number">
+                                placeholder=" Enter Phone Number" minlength="10" maxlength="10">
                     </div>
                     
                     <div class="col-md-12 flex-grow-1 ms-2">
