--- a/app/templates/classes.html
+++ b/app/templates/classes.html
@@ -292,7 +292,7 @@
                             <input type="hidden" name="class_id" id="class_id">
                             <label for="class_name" class="form-label">Class Name</label>
                             <input type="text" class="form-control class_name" id="class_name" name="class_name"
-                                placeholder="Enter a Class Name">
+                                placeholder="Enter a Class Name"  maxlength="1000">
                         </div>
                     </div>
                 </div>
@@ -332,7 +332,7 @@
                             <input type="hidden" name="section_id" id="section_id">
                             <label for="section_name" class="form-label">Section Name</label>
                             <input type="text" class="form-control section_name" id="section_name" name="section_name"
-                                placeholder="Enter a Section Name">
+                                placeholder="Enter a Section Name" maxlength="1000">
                         </div>
                     </div>
                 </div>
@@ -371,7 +371,7 @@
                             <input type="hidden" name="subject_id" id="subject_id">
                             <label for="subject_name" class="form-label">Subject Name</label>
                             <input type="text" class="form-control subject_name" id="subject_name" name="subject_name"
-                                placeholder="Enter a Subject Name">
+                                placeholder="Enter a Subject Name" maxlength="1000">
                         </div>
                     </div>
                 </div>
@@ -408,14 +408,14 @@
                       <div class="col-md-12 form-content">
                         <label for="percent_from" class="form-label">Minimum Percent(%)</label>
                         <input type="number" class="form-control percent_from" id="percent_from" name="percent_from"
-                            placeholder="Enter minimum percentage">
+                            placeholder="Enter minimum percentage" min="0" max="100">
                       </div>
                     </div>
                             <div class="d-flex mt-2">
                               <div class="col-md-12 form-content">
                         <label for="percent_upto" class="form-label">Maximum Percent(%)</label>
                         <input type="number" class="form-control percent_upto" id="percent_upto" name="percent_upto"
-                             placeholder="Enter maximum percentage">    
+                             placeholder="Enter maximum percentage" min="0" max="100">    
                     </div>
                     </div>
                     <div class="d-flex mt-2">
@@ -424,7 +424,7 @@
                             <input type="hidden" name="id" id="applicable_id">
                             <label for="grade_name" class="form-label">Grade Name</label>
                             <input type="text" class="form-control grade_name" id="grade_name" name="grade_name"
-                                placeholder="Enter a Subject Name">
+                                placeholder="Enter a Subject Name" maxlength="1000">
                         </div>
                     </div>
                 </div>
