--- a/app/templates/register_staff.html
+++ b/app/templates/register_staff.html
@@ -1,10 +1,10 @@
 {% extends '_layout.html' %}
 {% load static %}
 {% block title %} Staff Registration{% endblock %}
-
+ 
 {% block content %}
 <script src="{% static 'app-js/register_staff.js' %}"></script>
-
+ 
 <div class="row" id="heading-row">
     <div class="col-md-3"></div>
     <div class="col-sm-12 col-md-6 col-xl-7.5" style="padding: 1rem" id="staffFormArea">
@@ -64,17 +64,17 @@
                                     <div class="row">
                                         <div class="col-md-6">
                                             <label for="staff_name" class="form-label">Name</label>
-                                            <input type="text" class="form-control" id="staff_name" name="staff_name" value="{{staff_data.staff_name}}"
+                                            <input type="text" class="form-control" id="staff_name" name="staff_name" minlength="1" maxlength="255" value="{{staff_data.staff_name}}"
                                                 >
                                         </div>
                                             <div class="col-md-6">
                                             <label for="role" class="form-label">Designation</label>
-                                            <input type="text" class="form-control" id="role" name="role" value="{{staff_data.role}}">
+                                            <input type="text" class="form-control" id="role" name="role" minlength="1" maxlength="255" value="{{staff_data.role}}">
                                         </div>
-
+ 
                                     </div>
                                     <div class="row">
-
+ 
                                         <div class="col-md-5">
                                             <label for="date_of_birth" class="form-label">Date of Birth</label>
                                             <input type="date" class="form-control" id="date_of_birth"
@@ -119,7 +119,7 @@
                                 <div class="accordion-body">
                                     <div class="col-md-12">
                                         <label for="email" class="form-label">Email</label>
-                                        <input type="text" class="form-control" id="email" name="email" value="{{staff_data.email}}">
+                                        <input type="text" class="form-control" id="email" name="email" value="{{staff_data.email}}" maxlength="255">
                                     </div>
                                     <div class="col-md-12">
                                         <label for="phone_number" class="form-label">Phone</label>
@@ -143,12 +143,12 @@
                                     <div class="col-md-12">
                                         <label for="specialization" class="form-label">Specialization</label>
                                         <input type="text" class="form-control" id="specialization" name="specialization" value="{{staff_data.specialization}}"
-                                            >
+                                         maxlength="300"   >
                                     </div>
                                     <div class="col-md-12">
                                         <label for="experience" class="form-label">Experience</label>
                                         <input type="text" class="form-control" id="experience" name="experience" value="{{staff_data.experience}}"
-                                            >
+                                        maxlength="300"   >
                                     </div>
                                 </div>
                             </div>
@@ -175,7 +175,7 @@
                                     </div>
                                     <div class="col-md-12">
                                         <label for="salary" class="form-label">Salary Amount</label>
-                                        <input type="text" class="form-control" id="salary" name="salary" value="{{staff_data.salary}}"
+                                        <input type="text" class="form-control" id="salary" name="salary" minlength="1" maxlength="30" value="{{staff_data.salary}}"
                                             >
                                     </div>
                                 </div>
@@ -194,36 +194,40 @@
                                 <div class="accordion-body">
                                     <div class="col-md-12">
                                         <label for="Address" class="form-label">Address Line</label>
-                                        <textarea class="form-control" id="address" rows="3" name="address" value="{{staff_data.address.0}}"
-                                            ></textarea>
+                                        <textarea class="form-control" id="address" rows="3" name="address" minlength="1" maxlength="500"
+                                            >{{staff_data.address.0}}</textarea>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-6">
                                             <label for="city" class="form-label">City</label>
-                                            <input type="text" class="form-control" id="city" name="city" value="{{staff_data.address.1}}">
+                                            <input type="text" class="form-control" id="city" name="city" value="{{staff_data.address.1}}" maxlength="300">
                                         </div>
                                         <!-- state -->
                                         <div class="col-md-6">
                                             <label for="state" class="form-label">State</label>
-                                            <input type="text" class="form-control" id="state" name="state" value="{{staff_data.address.2}}">
+                                            <input type="text" class="form-control" id="state" name="state" value="{{staff_data.address.2}}" maxlength="100">
                                         </div>
                                     </div>
                                     <div class="row">
                                         <!-- country -->
                                         <div class="col-md-6">
                                             <label for="country" class="form-label">Country</label>
-                                            <input type="text" class="form-control" id="country" name="country" value="{{staff_data.address.3}}">
+                                            <input type="text" class="form-control" id="country" name="country" value="{{staff_data.address.3}}" maxlength="100">
                                         </div>
                                         <!-- pincode -->
                                         <div class="col-md-6">
                                             <label for="pincode" class="form-label">Pincode</label>
-                                            <input type="text" class="form-control" id="pincode" name="pincode" value="{{staff_data.address.4}}">
+                                            <input type="text" class="form-control" id="pincode" name="pincode" value="{{staff_data.address.4}}" maxlength="100">
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            
                         </div>
-                        
+                        <div class="col-md-12">
+                            <code>Scroll up <i class="bi bi-arrow-up-short"></i> to Save changes.</code>
+                        </div>
+                       
                     </div>
                 </div><!-- end card-body -->
             </div>
@@ -231,5 +235,5 @@
     </div>
     <div class="col-md-3"></div>
 </div>
-
+ 
 {% endblock %}
