--- a/app/templates/transport.html
+++ b/app/templates/transport.html
@@ -42,15 +42,15 @@
                 <div class="d-flex mt-2">
                     <input type="hidden" name="id" id="id">
                     <div class="col-md-12">
-                        <label class="form-label">Vehicle Number </label>
+                        <label class="form-label" >Vehicle Number </label>
                         <input type="text" class="form-control" id="vehicle_number" name="vehicle_number"
-                            placeholder=" Enter Vehicle number">
+                            placeholder=" Enter Vehicle number" maxlength="100" minlength="3">
                     </div>
                 </div>
                 <div class="col-md-12">
                     <label for="vehicleDetails" class="form-label">Vehicle Details</label>
                     <textarea class="form-control" id="vehicle_details" name="vehicle_details"
-                        placeholder="Driver & Conductor Details"></textarea>
+                        placeholder="Driver & Conductor Details" maxlength="5000" minlength="3"></textarea>
                 </div>
                 <div class="col-md-12">
                     <label for="register_date" class="form-label">Date of Registation</label>
@@ -59,7 +59,7 @@
                 <div class="col-md-12">
                     <label for="transport_name" class="form-label">Route</label>
                     <input type="text" class="form-control" id="transport_name" name="transport_name"
-                        placeholder="Enter Route name">
+                        placeholder="Enter Route name" maxlength="1000" minlength="3">
                 </div>
             </div>
             <div class="modal-footer">
@@ -73,52 +73,52 @@
 
 <div class="row">
     <div class="col-md-12">
-        <table class="table table-striped table-hover table-sticky table_students">
-            <thead class="thead-dark">
-                <tr>
-                    <th>S.NO</th>
-                    <th>Vehicle Number</th>
-                    <th>Vehicle Details</th>
-                    <th>Date of Register</th>
-                    <th>Route Name</th>
-                    <th>Stoppage</th>
-                    <th>Students</th>
-                    <th>Staffs</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody class="tbl__bdy" id="transport_details">
-                {% for transport in transportation %}
-                <tr class="tr-transport-{{transport.transport_id}}">
-                    <td>{{forloop.counter}}</td>
-                    <td class="vehicle_number">{{transport.vehicle_number}}</td>
-                    <td class="vehicle_details w-25">{{transport.vehicle_details}}</td>
-                    <td class="register_date">{{transport.register_date}}</td>
-                    <td class="transport_name">{{transport.transport_name}}</td>
-                    <td>
-                        <button class="btn btn-sm btn-dark rounded-pill" data-bs-toggle="modal"
-                            data-bs-target="#stopFormModal"
-                            onclick="openstopDetails('stopForm','{{ transport.transport_name }}','{{transport.transport_id}}')"
-                            data-id="{{transport.transport_id}}">View</button>
-                    </td>
-                    <td>
-                    <button class="btn btn-sm btn-dark rounded-pill" data-bs-toggle="modal"  data-bs-target="#studentModal" onclick="showStudentDetails(this)" data-trans-id="{{transport.transport_id}}">View</button>
-                    </td>
-                    <td>
-                        <button class="btn btn-sm btn-dark rounded-pill" data-bs-toggle="modal"  data-bs-target="#staffModal" onclick="showStaffDetails(this)" data-trans-id="{{transport.transport_id}}">View</button>
+            <table class="table table-striped table-hover table-sticky table_students">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>S.NO</th>
+                        <th>Vehicle Number</th>
+                        <th>Vehicle Details</th>
+                        <th>Date of Register</th>
+                        <th>Route Name</th>
+                        <th>Stoppage</th>
+                        <th>Students</th>
+                        <th>Staffs</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody class="tbl__bdy" id="transport_details">
+                    {% for transport in transportation %}
+                    <tr class="tr-transport-{{transport.transport_id}}">
+                        <td>{{forloop.counter}}</td>
+                        <td class="vehicle_number">{{transport.vehicle_number}}</td>
+                        <td class="vehicle_details w-25">{{transport.vehicle_details}}</td>
+                        <td class="register_date">{{transport.register_date}}</td>
+                        <td class="transport_name">{{transport.transport_name}}</td>
+                        <td>
+                            <button class="btn btn-sm btn-dark rounded-pill" data-bs-toggle="modal"
+                                data-bs-target="#stopFormModal"
+                                onclick="openstopDetails('stopForm','{{ transport.transport_name }}','{{transport.transport_id}}')"
+                                data-id="{{transport.transport_id}}">View</button>
                         </td>
-                    <td>
-                        <button type="button" class="btn  btn-sm btn-info btnEdit" id="btnEdit"
-                            data-id="{{transport.transport_id}}">
-                            <i class="bi bi-pencil-square"></i></button>
-                        <button type="button" class="btn btn-sm btn-danger btndelete" id="deleteButton"
-                            data-id="{{transport.transport_id}}">
-                            <i class="bi bi-trash3"></i></button>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+                        <td>
+                        <button class="btn btn-sm btn-dark rounded-pill" data-bs-toggle="modal"  data-bs-target="#studentModal" onclick="showStudentDetails(this)" data-trans-id="{{transport.transport_id}}">View</button>
+                        </td>
+                        <td>
+                            <button class="btn btn-sm btn-dark rounded-pill" data-bs-toggle="modal"  data-bs-target="#staffModal" onclick="showStaffDetails(this)" data-trans-id="{{transport.transport_id}}">View</button>
+                            </td>
+                        <td>
+                            <button type="button" class="btn  btn-sm btn-info btnEdit" id="btnEdit"
+                                data-id="{{transport.transport_id}}">
+                                <i class="bi bi-pencil-square"></i></button>
+                            <button type="button" class="btn btn-sm btn-danger btndelete" id="deleteButton"
+                                data-id="{{transport.transport_id}}">
+                                <i class="bi bi-trash3"></i></button>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
     </div>
 </div>
 <!-- Student form -->
@@ -172,7 +172,7 @@
                             <input type="hidden" name="stopage_id" id="stopage_id">
                             <label for="stopage" class="details" id="label1">Add Stopages</label>
                             <div class="d-flex gap-2">
-                                <input type="text" class="form-control" id="stopage" placeholder="Add stopage">
+                                <input type="text" class="form-control" id="stopage" placeholder="Add stopage" maxlength="3000">
                                 <input type="hidden" value="" id="add-stopage-btn">
                                 <button type="button" class="add-stopage-btn btn btn-success" style="height: 2rem;"
                                 onclick="addMore(this)"><i class="bi bi-plus-circle"></i></button>
